# sheet-hero

./: .gitignore  CMakeLists.txt  DataTypes.hpp  Game.cpp  Game.hpp  Measure.cpp  Measure.hpp  Note.cpp  Note.hpp  NoteSet.cpp  NoteSet.hpp  README.md  Song.cpp  Song.hpp  SongRenderer.cpp  SongRenderer.hpp  TODO.md  TimeSignature.cpp  sheet-hero.cpp  vcpkg.json
include/: App.hpp  DataTypes.hpp  GrandMeasure.hpp  LineShape.hpp  Measure.hpp  MidiDevice.hpp  MidiEngine.hpp  MusicalData.hpp  MusicalSymbol.hpp  Note.hpp  NoteGroup.hpp  PianoKeyboard.hpp  Scale.hpp  SheetMusicSettings.hpp  Song.hpp  SongGenerator.hpp  SongPlayer.hpp  SongRenderer.hpp  TimeSignature.hpp
src/: App.cpp  AppImgui.cpp  DataTypes.cpp  LineShape.cpp  Measure.cpp  MidiDevice.cpp  MidiEngine.cpp  MusicalData.cpp  MusicalSymbol.cpp  Note.cpp  NoteGroup.cpp  NoteSet.cpp  PianoKeyboard.cpp  Scale.cpp  SheetMusicSettings.cpp  Song.cpp  SongGenerator.cpp  SongPlayer.cpp  SongRenderer.cpp  TimeSignature.cpp  sheet-hero.cpp
